--- a/assignment_1.html
+++ b/assignment_1.html
@@ -94,6 +94,9 @@
             }
 
             @media (max-width: 768px) {
+                .container  {
+                    width: 100%;
+                }
                 .row-2 .carousel{
                     position: relative;
                     background-color: green;
